[package]
name = "cvode-wrap"
version = "0.1.5"
authors = [
    "Arthur Carcano <arthur.carcano@inria.fr>",
    "Anne de Jong <j.a.dejong@ascee.nl>",
]
edition = "2021"
license = "BSD-3-Clause"
description = "A wrapper around cvode and cvodeS from sundials, allowing to solve ordinary differential equations (ODEs) with or without their sensitivities."
repository = "https://gitlab.inria.fr/InBio/Public/cvode-rust-wrap/"
readme = "Readme.md"
keywords = ["sundials", "cvode", "cvodes", "ode", "sensitivities"]
categories = ["science", "simulation", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
array-init = "2.0"

[target.'cfg(windows)'.dependencies]
sundials-sys = { git = "https://github.com/Chris00/sundials-sys", rev = "ae14510", default-features = false, features = [ "cvodes" ] }

[target.'cfg(unix)'.dependencies]
sundials-sys = { git = "https://github.com/Chris00/sundials-sys", rev = "ae14510", default-features = false, features = [ "cvodes", "build_libraries" ] }

[package.metadata.docs.rs]

features = ["sundials-sys/build_libraries"]
